# syfetch

./: Cargo.toml
src/: cpu.rs  distro.rs  gpu.rs  kernel.rs  main.rs  memory.rs  temp.rs  uptime.rs
